--- a/index.html
+++ b/index.html
@@ -62,9 +62,38 @@
 
         
         </section>
+        <!-- what i do section start -->
         <section>
             <h4 class="about-title">What I do</h4>
             <p  id="id" class="about-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="what-i-do">
+                <div class="box">
+                    <img  class="icons" src="./images/icons/js.png" alt="coming soon">
+                    <h4 class="title-of-what-i-do">Vanilla JavaScript</h4>
+                    <p class="discription-of-what-i-do">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+            <div class="what-i-do">
+                <div class="box">
+                    <img  class="icons" src="./images/icons/react.png" alt="Coming soon.">
+                    <h4 class="title-of-what-i-do">React</h4>
+                    <p class="discription-of-what-i-do">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+            <div class="what-i-do">
+                <div class="box">
+                    <img  class="icons" src="./images/icons/nodejs.png" alt="Coming soon.">
+                    <h4 class="title-of-what-i-do">Node.js</h4>
+                    <p class="discription-of-what-i-do">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+            <div class="what-i-do">
+                <div class="box">
+                    <img  class="icons" src="./images/icons/mongo.png" alt="Coming soon.">
+                    <h4 class="title-of-what-i-do">MongoDB</h4>
+                    <p class="discription-of-what-i-do">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
         </section>
     
     </main>
