--- a/index.html
+++ b/index.html
@@ -149,12 +149,36 @@
                 </div>
                 </div>
             </div>
+            <div class="download">
+                <button class="btn" >Download CV</button>
+            </div>
         </section>
 
    
     </main>
+    <!-- Footer section start -->
     <footer>
-
+        <div class="foot">
+            <div class="clm">
+                <h3 class="fhead">Lets Connect</h3>
+                <p class="fp">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div >
+                    <a href="https://www.facebook.com/"><img class="scl" src="./images/icons/facebook.png" alt="Coming soon"></a>
+                    <a href="https://twitter.com/"><img class="scl" src="./images/icons/twitter.png" alt="Coming soon"></a>
+                    <a href="https://www.instagram.com/"><img  class="scl"src="./images/icons/insta.png" alt="Coming soon"></a>
+                </div>
+            </div>
+            <div id="aling"  class="clm">
+                <form class="frm" action="#" method="post" >
+                        <h3 class="msgform">Let's Message me</h3>
+                <input type="text" placeholder="Your Name">
+                <input type="text" placeholder="Your Email">
+                <textarea cols="20" rows="10" placeholder="Message"></textarea>
+                <input type="submit" value="submit">
+               </form>
+                
+            </div>
+        </div>
     </footer>
 </body>
 </html>
