--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/protfolio.css">
+
+    <script src="https://kit.fontawesome.com/71a469f1f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -24,8 +26,8 @@
                 <h4 class="banner-greeting">Hi,  I am</h4>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-paragraph">Shot what able cold new see hold.Friendly as an betrayed formerly  he. Morning because as to society behaved moments.</p>
-                <button class="btn">Download CV</button>
-                <button class="btn">Contact</button>
+                <button class="btn"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <div>
                 <img  class="harder" src="./images/hardy.png" alt="Picture of Harder.">
@@ -150,7 +152,7 @@
                 </div>
             </div>
             <div class="download">
-                <button class="btn" >Download CV</button>
+                <button class="btn" > <i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
 
@@ -163,9 +165,9 @@
                 <h3 class="fhead">Lets Connect</h3>
                 <p class="fp">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
                 <div >
-                    <a href="https://www.facebook.com/"><img class="scl" src="./images/icons/facebook.png" alt="Coming soon"></a>
-                    <a href="https://twitter.com/"><img class="scl" src="./images/icons/twitter.png" alt="Coming soon"></a>
-                    <a href="https://www.instagram.com/"><img  class="scl"src="./images/icons/insta.png" alt="Coming soon"></a>
+                    <a href="https://www.facebook.com/" target="_blank" ><img class="scl" src="./images/icons/facebook.png" alt="Coming soon"></a>
+                    <a href="https://twitter.com/" target="_blank"><img class="scl" src="./images/icons/twitter.png" alt="Coming soon"></a>
+                    <a href="https://www.instagram.com/" target="_blank" ><img  class="scl"src="./images/icons/insta.png" alt="Coming soon"></a>
                 </div>
             </div>
             <div id="aling"  class="clm">
