--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <h3 class="msgform">Let's Message me</h3>
                 <input type="text" placeholder="Your Name">
                 <input type="text" placeholder="Your Email">
-                <textarea cols="20" rows="10" placeholder="Message"></textarea>
+                <textarea  class="teaxtarea" cols="20" rows="10" placeholder="Message"></textarea>
                 <input type="submit" value="submit">
                </form>
                 
