--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <hr>
                     </div>
                     <div class="first-colum"><h2 class="resume-title">Master in Computer Engineering</h2>
-                    <h4 class="resume-versity">Harvard University / 2015 - 2017</h4>
+                    <h4 class="resume-university">Harvard University / 2015 - 2017</h4>
 
                     <p class="resume-description">List skill/technologies here. You can change the icon above 
                         to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p> 
@@ -162,7 +162,7 @@
     <footer>
         <div class="foot">
             <div class="clm">
-                <h3 class="fhead">Lets Connect</h3>
+                <h3 class="f-head">Lets Connect</h3>
                 <p class="fp">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
                 <div >
                     <a href="https://www.facebook.com/" target="_blank" ><img class="scl" src="./images/icons/facebook.png" alt="Coming soon"></a>
@@ -170,7 +170,7 @@
                     <a href="https://www.instagram.com/" target="_blank" ><img  class="scl"src="./images/icons/insta.png" alt="Coming soon"></a>
                 </div>
             </div>
-            <div id="aling"  class="clm">
+            <div id="align"  class="clm">
                 <form class="frm" action="#" method="post" >
                         <h3 class="msgform">Let's Message me</h3>
                 <input type="text" placeholder="Your Name">
